change method of detect iframe

--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>iFrame Test</title>
   </head>
   <body>
     <div id="app">
-
-      <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScQpVWXXXVkXR3jj8INR9EKDquUUYi8lLisjDMVlDxhtmS3Ow/viewform?embedded=true" width="640" height="460" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe> -->
-      <iframe src="./index2.html" width="640" height="460" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
     </div>
     <script type="module" src="/app.js"></script>
   </body>
